@@ -98,5 +98,7 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] Correction d'un problème d'accès aux commandes inist-tools en
     tant que root
   * [DEV] Ajout de l'executable 'inistexec' dans le paquet distribué
+  * [DEV] Ajout de l'installation de lsb-release sur Debian s'il est
+    absent
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
